# Rough-Volatility-Neural-SDEs

./: .gitignore  CITATION.cff  Dockerfile  README.md  REPRODUCE.md  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
checkpoints/: checkpoint_final.pt
docs/: convergence.md  fbm.md  generator.md  hedging.md  market_data.md  signature.md  test_fbm.md  test_generator.md  test_hedging.md  test_signature.md  train.md
experiments/: calibrate_heston.py  config.py  run_bootstrap_ci.py  run_convergence.py  run_hedging.py
notebooks/: demo.ipynb  generate_notebook.py  results.ipynb
outputs/: bootstrap_ci.csv  convergence_results.csv  hedging_quick.csv  hedging_results.csv  heston_params.json  hypothesis_tests.json
outputs/pnls/: BlackScholesDelta_pnls.npy  HestonDelta_pnls.npy  NaiveHedge_pnls.npy  NeuralHedge_pnls.npy
paper_results/: README.md
scripts/: plot_all_figures.py  quick_start.sh
src/: __init__.py
src/agents/: __init__.py  baselines.py
src/data/: __init__.py  market_data.py
src/envs/: __init__.py  hedging_env.py
src/hedging/: __init__.py  engine.py
src/loss/: __init__.py  signature.py
src/metrics/: __init__.py  statistics.py
src/models/: __init__.py  generator.py
src/noise/: __init__.py  fbm.py
src/simulators/: __init__.py
src/utils/: __init__.py  seed.py
src/validation/: __init__.py  convergence_test.py
tests/: __init__.py  test_fbm.py  test_generator.py  test_hedging.py  test_signature.py
